# kindle-screensaver

./: Cargo.toml  README.md
examples/: convert.rs
src/: dithering.rs  lib.rs  structs.rs
