[package]
name = "kindle-screensaver"
version = "0.1.0"
edition = "2024"
authors = ["jckli <jack@hayasaka.moe>"]
description = "A library for converting images to kindle-compatible screensavers"
license = "MIT"
repository = "https://github.com/jckli/kindle-screensaver"
readme = "README.md"
keywords = ["kindle", "screensaver", "image", "conversion", "e-ink"]
categories = ["multimedia::images"]


[dependencies]
bytes = "1.10.1"
image = "0.25.6"
rayon = "1.10.0"
thiserror = "2.0.12"
